[package]
name = "nasl-builtin-regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = { path = "../nasl-syntax" }
nasl-function-proc-macro = {path = "../nasl-function-proc-macro"}
storage = {path = "../storage"}
lazy-regex = "3.1.0"
regex = "1.10.6"

[dev-dependencies]
nasl-interpreter = { path = "../nasl-interpreter" }
nasl-builtin-std = {path = "../nasl-builtin-std"}
