[package]
name = "nasl-builtin-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
# requires libssh > 3.0.0 to be installed
libssh-rs = {git = "https://github.com/jjnicola/libssh-rs.git", branch = "main", features = ["vendored-openssl", "vendored"]}
storage = {path = "../storage"}
#openssl-sys = {version = "0.9.93", features = ["vendored"]}

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}
