[package]
name = "nasl-builtin-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
libssh-rs = {version = "~0.2", features = ["vendored-openssl", "vendored"]}
storage = {path = "../storage"}

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}
