[package]
name = "nasl-builtin-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-syntax = {path = "../nasl-syntax"}
nasl-function-proc-macro = {path = "../nasl-function-proc-macro"}
storage = {path = "../storage"}
tracing = "0.1.40"
libssh-rs = {version = "~0.2", features = ["vendored-openssl", "vendored"]}
russh = { version = "0.44.0", features = ["vendored-openssl"] }
thiserror = "1.0.63"

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}
