[package]
name = "nasl-builtin-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-builtin-knowledge-base = {path = "../nasl-builtin-knowledge-base"}
nasl-builtin-cryptographic = {path = "../nasl-builtin-cryptographic"}
nasl-builtin-string = {path = "../nasl-builtin-string"}
nasl-builtin-host = {path = "../nasl-builtin-host"}
nasl-builtin-http = { version = "0.1.0", path = "../nasl-builtin-http" }
nasl-builtin-description = {path = "../nasl-builtin-description"}
nasl-builtin-misc = {path = "../nasl-builtin-misc"}
storage = {path = "../storage"}
nasl-syntax = {path = "../nasl-syntax"}

# depend on c libraries and are considered unstable for now
nasl-builtin-raw-ip = {path = "../nasl-builtin-raw-ip", optional = true}

# has license issues on debian:stable and is therefore disabled
nasl-builtin-ssh = {path = "../nasl-builtin-ssh", optional = true}

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}

[features]
nasl-c-lib = ["nasl-builtin-cryptographic/nasl-c-lib"]
experimental = ["nasl-builtin-raw-ip", "nasl-builtin-ssh", "nasl-c-lib"]
