[package]
name = "nasl-builtin-string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-function-proc-macro = {path = "../nasl-function-proc-macro"}
nasl-syntax = {path = "../nasl-syntax"}
storage = {path = "../storage"}

[dev-dependencies]
nasl-interpreter = {path = "../nasl-interpreter"}
