[package]
name = "nasl-builtin-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nasl-syntax = { path = "../nasl-syntax" }
storage = { path = "../storage" }
thiserror = "1.0.62"
tracing = "0.1"
async-trait = "0.1.77"
tokio = "1.39.2"

[features]
default = ["enforce-no-trailing-arguments"]
enforce-no-trailing-arguments = []

[dev-dependencies]
nasl-function-proc-macro = {path = "../nasl-function-proc-macro"}