[package]
name = "nasl-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argument parsing
clap = { version = "~4" }
# read openvas conifuration; until we use own toml file
configparser = "3"
# recursively walk through a dir
walkdir = "2"

feed = {path = "../feed"}
nasl-syntax = { path = "../nasl-syntax" }
scanconfig = { path = "../scanconfig" }
models = { path = "../models" }
nasl-interpreter = { path = "../nasl-interpreter", default-features = false }
storage = { path = "../storage" }
redis-storage = { path = "../redis-storage" }
json-storage = {path = "../json-storage"}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
serde_json = "1.0.96"
toml = "0.8.6"
serde = "1.0.190"


[features]
nasl-builtin-raw-ip = ["nasl-interpreter/nasl-builtin-raw-ip"]
nasl-builtin-ssh = ["nasl-interpreter/nasl-builtin-ssh"]
experimental = ["nasl-builtin-ssh", "nasl-builtin-raw-ip"]
