[package]
name = "nasl-interpreter"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
nasl-syntax = {path = "../nasl-syntax"}
storage = {path = "../storage"}
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-builtin-std = {path = "../nasl-builtin-std", default-features = false}
# used for !~ =~ string regex operations
regex = "1"

[features]
#ssh_support= ["nasl-builtin-std/ssh_support"
nasl-builtin-raw-ip = ["nasl-builtin-std/nasl-builtin-raw-ip"]
nasl-builtin-ssh = ["nasl-builtin-std/nasl-builtin-ssh"]
experimental = ["nasl-builtin-ssh", "nasl-builtin-raw-ip"]
