[package]
name = "nasl-interpreter"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
dep-graph = {path = "../dep-graph"}
nasl-syntax = {path = "../nasl-syntax"}
models = { path = "../models" }
storage = {path = "../storage"}
nasl-builtin-utils = {path = "../nasl-builtin-utils"}
nasl-builtin-std = {path = "../nasl-builtin-std", default-features = false}
# used for !~ =~ string regex operations
regex = "1"
tracing = "0.1.40"
thiserror = "1.0.60"

[features]
nasl-builtin-raw-ip = ["nasl-builtin-std/nasl-builtin-raw-ip"]
nasl-builtin-ssh = ["nasl-builtin-std/nasl-builtin-ssh"]
nasl-c-lib = ["nasl-builtin-std/nasl-c-lib"]
experimental = ["nasl-builtin-ssh", "nasl-builtin-raw-ip", "nasl-c-lib"]

[dev-dependencies]
tracing-test = "0"
