[package]
name = "nasl-syntax"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage" }
thiserror = "1.0.62"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "parse"
harness = false
