[package]
name = "nvtcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
chrono = "0.4.23"
sink = { path = "../sink" }


[features]
#default = ["redis_test"]
# uses a redis instance when enabled 
# to enable it for testing run 
# cargo test --features=redis_test 
redis_test = []
