[package]
name = "openvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.4"
models = { path = "../models" }
osp = { version = "0.1.0", path = "../osp" }
redis = "0.22.0"
redis-storage = { version = "0.1.0", path = "../redis-storage" }
storage = { version = "0.1.0", path = "../storage" }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1", features = ["derive"], optional = true }
async-trait = "0.1.77"

[features]
default = ["serde_support"]
serde_support = ["serde"]
