[package]
name = "openvasd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
osp = { path = "../osp" }
nasl-interpreter = { path = "../nasl-interpreter" }
feed = { path = "../feed" }
storage = { path = "../storage" }
redis-storage = { path = "../redis-storage" }
infisto = { path = "../infisto" }
notus = { path = "../notus" }
openvas = { path = "../openvas" }
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
rustls = { version = "0.22" }
tokio-rustls = "0.25"
futures-util = "0.3.28"
rustls-pemfile = "1.0.2"
async-trait = "0.1.68"
clap = { version = "4.3.0", features = ["derive", "env"] }
toml = "0.7.4"
chacha20 = "0.9.1"
rand = "0.8.5"
pbkdf2 = { version = "0.12.2", features = ["password-hash"] }
sha2 = "0.10.7"
generic-array = "0.14.7"
base64 = "0.21.2"
hyper-util = { version = "0", features = ["tokio"] }
http-body-util = "0.1.0"
http-body = "1"
lazy_static = "1.4.0"

[dev-dependencies]
tracing-test = "0.1"
